--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     url: jdbc:mysql://localhost:3306/author_book_rest
     username: root
     password: root
+
+jwt:
+  secret: poison007
+  expiration: 330000
